feat: support generic ingredient named servings
